# ghc-tcplugin-api

./: .gitignore  cabal.project  changelog.md  ghc-tcplugin-api.cabal  readme.md
.github/workflows/: ci.yml
examples/EqSat/: cabal.project  eq-sat.cabal
examples/EqSat/src/EqSat/: Examples.hs  Plugin.hs
examples/RewriterPlugin/: RewriterPlugin.cabal
examples/RewriterPlugin/examples/RewriterPlugin/Examples/: Fail1.hs  Fail2.hs  Fail3.hs  Fail4.hs  Fail5.hs  Pass.hs
examples/RewriterPlugin/plugin/: RewriterPlugin.hs
examples/RewriterPlugin/plugin/RewriterPlugin/: Definitions.hs
examples/SystemF/: system-f.cabal
examples/SystemF/src/SystemF/: Examples.hs  Plugin.hs  Term.hs  Type.hs
examples/SystemF/src/SystemF/Plugin/: Test.hs
examples/SystemF/src/SystemF/Term/: Evaluation.hs  Substitution.hs
src/GHC/TcPlugin/: API.hs
src/GHC/TcPlugin/API/: Internal.hs  Names.hs  TyConSubst.hs
src/GHC/TcPlugin/API/Internal/: Shim.hs
src/GHC/TcPlugin/API/Internal/Shim/: Reduction.hs
