cabal-version:  3.0
name:           eq-sat
version:        0.1.0.0
synopsis:       Using equality saturation in typechecker plugins
license:        BSD-3-Clause
build-type:     Simple
author:         Sam Derbyshire
maintainer:     Sam Derbyshire
copyright:      2025 Sam Derbyshire

common common

  build-depends:
    base,
    ghc,
    ghc-tcplugin-api,
    containers,
    hegg
      >= 0.6 && < 0.7

  default-language:
    Haskell2010

  ghc-options:
    -O1
    -Wall
    -Wcompat
    -fwarn-missing-local-signatures
    -fwarn-incomplete-uni-patterns
    -fwarn-missing-deriving-strategies
    -fno-warn-unticked-promoted-constructors
    -dcore-lint

library

  import:
    common

  hs-source-dirs:
    src

  exposed-modules:
    EqSat.Examples
    EqSat.Plugin
